[package]
name = "reachable"
version = "0.2.0"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
edition = "2018"

[dependencies]
dns-lookup = {version = "1.0.7"}
futures    = {version = "0.3.17", optional = true}
async-io   = {version = "1.0.1",  optional = true}

[dev-dependencies]
mockall = {version = "0.10.2"}

[features]
default = ["async"]
async   = ["futures", "async-io"]
