[package]
name = "reachable"
version = "0.2.0"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
edition = "2018"

[dependencies]
dns-lookup = {version = "1.0.7"}
futures    = {version = "0.3.17", optional = true}
tokio      = {version = "1.12.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros"]}

[dev-dependencies]
mockall = {version = "0.10.2"}

[features]
default = ["async"]
async   = ["futures", "tokio"]

[workspace]
members = [
    "examples/usage",
    "examples/async_usage",
    "examples/async_usage_custom_target",
]
