[package]
name = "reachable"
version = "0.2.1"
edition = "2021"
authors = ["Simon Brummer <simon.brummer@posteo.de>"]
description = "Check if a Target (ICMP, TCP, custom) is reachable."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/brummer-simon/reachable.git"
keywords = ["network", "async"]
categories = ["network-programming"]

[dependencies]
dns-lookup = {version = "1.0.7"}
futures    = {version = "0.3.17", optional = true}
tokio      = {version = "1.12.0", optional = true, features = ["rt-multi-thread", "sync", "time", "macros"]}

[dev-dependencies]
mockall = {version = "0.10.2"}

[features]
default = ["async"]
async   = ["futures", "tokio"]

[workspace]
members = [
    "examples/usage",
    "examples/async_usage",
    "examples/async_usage_custom_target",
]
